added redoc middleware
